--- a/Html5/기본홈페이지.html
+++ b/Html5/기본홈페이지.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>큰손농산</title>
-    <link rel="icon" type="icon" href="./image/파비콘.ico">
+    <link rel="icon" type="icon" href="../image/파비콘.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 </head>
@@ -70,11 +70,11 @@ li a:hover {
 </a>
 
 <a href="벌집.html" target=_blank>
-<img src="./벌집/벌집.png" alt="상품2" style="display:block; margin: 50px auto 50px auto; width:600px;height:600px;">
+<img src="/벌집/벌집.png" alt="상품2" style="display:block; margin: 50px auto 50px auto; width:600px;height:600px;">
 </a>
 
 <a href="꿀유자차.html" target=_blank>
-<img src="./꿀유자차/꿀유자차.PNG" alt="상품3" style="display:block; margin: 50px auto 50px auto; width:600px;height:600px;">
+<img src="꿀유자차/꿀유자차.PNG" alt="상품3" style="display:block; margin: 50px auto 50px auto; width:600px;height:600px;">
 </a>
 
 <hr>
