--- a/Html5/기본홈페이지.html
+++ b/Html5/기본홈페이지.html
@@ -74,7 +74,7 @@ li a:hover {
 </a>
 
 <a href="꿀유자차.html" target=_blank>
-<img src="honeytea/honeytea.PNG" alt="상품3" style="display:block; margin: 50px auto 50px auto; width:600px;height:600px;">
+<img src="honeytea/honeytea.png" alt="상품3" style="display:block; margin: 50px auto 50px auto; width:600px;height:600px;">
 </a>
 
 <hr>
