--- a/Html5/벌꿀.html
+++ b/Html5/벌꿀.html
@@ -26,21 +26,20 @@ body {
   transform: translate(-50%, -50%);
   color: white;}
 ul {
-  list-style-type: none;
+  list-style: none;  
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  text-align: center;
   background-color: rgb(241, 198, 6);
 }
 
 li {
-  float: left;
+  display: inline;
 }
 
 li a {
-  display: block;
+  display: inline-block;
   color: white;
-  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
